fixed alignment

--- a/main.css
+++ b/main.css
@@ -23,7 +23,7 @@ footer {
 
 footer,
 .menu-content,
-.skills {
+.tech-used {
   text-align: center;
 }
 
